# harpyja

./: .gitignore  ARCHITECTURE.md  FASTCONTEXT_INSTALL.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SPEC.md  measure_symbols_lift.py  pyproject.toml  ruff-errors-report.md
.speccraft/: agents.toml  architecture.md  conventions.md  guardrails.md  history.md  index.md
.speccraft/history-archive/: history.md
docs/registration/: README.md  codex-config.toml  mcp.json
harpyja/: __init__.py  cli.py  test_cli.py  test_doctor.py  test_fastcontext_source.py  test_package_skeleton.py  test_packaging.py
harpyja/config/: __init__.py  discovery.py  doctor.py  settings.py  test_discovery.py  test_settings.py
harpyja/deep/: __init__.py  backend.py  budget.py  engine.py  errors.py  host_tools.py  rlm.py  runner.py  test_deep.py  test_deep_integration.py  test_host_tools.py  test_rlm.py  wiring.py
harpyja/eval/: __init__.py  ac8_pilot.py  adoption_precheck.py  adoption_run.py  authoring_provenance.py  bakeoff_analysis.py  bakeoff_cli.py  bakeoff_config.py  bakeoff_driver.py  bakeoff_live.py  bakeoff_run.py  benchmark_fit.py  clock_attribution.py  config.py  dataset.py  diagnosis_config.py  diagnosis_outcome.py  diagnosis_run.py  discriminator_table.py  distill.py  enlargement.py  enlargement_arms.py  enlargement_authoring.py  enlargement_run.py  escalation.py  escalation_microrun.py  exclusivity_gate.py  gate_run.py  greedy_replay.py  greedy_serving.py  lever_table.py  live.py  live_artifacts.py  live_test_selection.py  live_verifier.py  locate_accuracy.py  locate_probe.py  metrics.py  oq2_classify.py  oq2_ledger.py  (+135 more)
harpyja/gateway/: __init__.py  gateway.py  test_gateway.py
harpyja/index/: __init__.py  artifacts.py  classify.py  hash.py  ignore.py  indexer.py  manifest.py  prior.py  test_artifacts.py  test_classify.py  test_hash.py  test_ignore.py  test_indexer.py  test_manifest.py  test_prior.py  test_routing.py  test_walk.py  walk.py
harpyja/orchestrator/: __init__.py  classify.py  format.py  gate.py  locate.py  matrix.py  test_classify.py  test_formatter.py  test_gate.py  test_locate.py  test_locate_integration.py  test_matrix.py  test_wiring.py  wiring.py
harpyja/scout/: __init__.py  backend.py  client.py  confidence_gate.py  confidence_signals.py  confirm.py  context_map.py  engine.py  errors.py  explorer_backend.py  explorer_loop.py  explorer_tools.py  fastcontext.py  normalize.py  reactive_policy.py  submit.py  (+18 more)
serving/: Modelfile.qwen3-14b  Modelfile.qwen3-8b  Modelfile.qwen3.5-4b
(+560 files in other folders)
