[project]
name = "harpyja"
version = "0.0.0"
description = "A precision code-retrieval MCP server for coding agents working in large, legacy, and air-gapped codebases."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "pathspec>=0.12",
]

[project.scripts]
harpyja = "harpyja.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harpyja"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
# Tests live next to the package under test; no top-level tests/ root.
testpaths = ["harpyja"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
norecursedirs = [".git", ".speccraft", "specs", "docs", ".venv", "build", "dist"]
markers = [
    "integration: spawns a real process / event loop; skippable in constrained envs",
]
